testing/locust-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
        - name: locust
          image: image-registry.openshift-image-registry.svc:5000/django/locust:latest
          ports:
            - containerPort: 8089
